--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,9 +13,19 @@ body.cb{
 	z-index: 1;
 }
 
-/*.container{
-	position: fixed;
-}*/
+a{
+	text-decoration: none;
+	color: #ffffff;
+	display: block;
+
+}
+
+a:hover{
+	text-decoration: none;
+	color: #000000;
+	background-color: #ffffff;
+
+}
 
 .contFrame{
 	position: fixed;
