--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,7 +35,7 @@ a:hover{
   	right: 5%;
 	width: 90%;
 	height: 90%;
-	border-radius: .5px dashed white;
+	border: .5px dashed white;
 
 }
 
@@ -47,7 +47,7 @@ a:hover{
 	position: fixed;
 	width: 100%;
 	border: .5px dashed white;
-	z-index: 1;
+	/*z-index: 1;*/
 	background-color: #000000;
 
 }
@@ -61,7 +61,7 @@ a:hover{
 	position: fixed;
 	width: 100%;
 	border: .5px dashed white;
-	z-index: 1;
+	/*z-index: 1;*/
 	background-color: #000000;
 
 }
