--- a/stylesheet.css
+++ b/stylesheet.css
@@ -47,7 +47,7 @@ a:hover{
 	position: fixed;
 	width: 100%;
 	border: .5px dashed white;
-	/*z-index: 1;*/
+	z-index: 1;
 	background-color: #000000;
 
 }
@@ -61,7 +61,7 @@ a:hover{
 	position: fixed;
 	width: 100%;
 	border: .5px dashed white;
-	/*z-index: 1;*/
+	z-index: 1;
 	background-color: #000000;
 
 }
