--- a/stylesheet_2.css
+++ b/stylesheet_2.css
@@ -112,6 +112,19 @@ hr.a{
 
 }
 
+.header{
+	text-align: center;
+	/*background-color: #000000;*/
+	font-family: 'Roboto Mono', monospace;
+	font-size: 20px;
+	position: fixed;
+	width: 100%;
+	border: .5px dashed white;
+	z-index: 1;
+	background-color: #000000;
+
+}
+
 
 .mainNav{
 	text-align: left;
