--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,19 +13,6 @@ body.cb{
 	z-index: 1;
 }
 
-a{
-	text-decoration: none;
-	color: #ffffff;
-	display: block;
-
-}
-
-a:hover{
-	text-decoration: none;
-	color: #000000;
-	background-color: #ffffff;
-
-}
 
 .contFrame{
 	position: fixed;
@@ -35,6 +22,6 @@ a:hover{
   	right: 5%;
 	width: 90%;
 	height: 90%;
-	border: .5px dashed white;
+	border-radius: .5px dashed white;
 
 }
