--- a/stylesheet_2.css
+++ b/stylesheet_2.css
@@ -4,6 +4,7 @@ html.main{
 	margin:0;
 	padding:0;
 	background-color: #000000;
+	scroll-behavior: smooth;
 
 				
 }
@@ -79,7 +80,7 @@ p{
 }
 
 .cont{
-	padding-top: 1%;
+	padding-top: 2%;
 	padding-left: 1%;
 	padding-right: 1%;
 	padding-bottom: 1%;
@@ -89,7 +90,7 @@ p{
 }
 
 hr.a{
-  border: .5px dotted white;
+  border-top: .5px dotted white;
 }
 
 img{
@@ -104,6 +105,9 @@ img{
 
 .espace{
 	height: 4%;
+}
+
+button{
 }
 
 /* /////////////////////// custom divs ////////////////////// */
@@ -152,24 +156,6 @@ img{
 
 }
 
-.grid-container2{
-	display: grid;
-	grid-template-columns: auto auto auto;
-	grid-column-gap: 3%;
-	grid-row-gap: 3%;
-	/*border: .5px dashed white;*/
-
-}
-
-.grid-container3{
-	display: grid;
-	grid-template-columns: auto auto auto;
-	grid-column-gap: 3%;
-	grid-row-gap: 3%;
-	/*border: .5px dashed white;*/
-
-}
-
 .grid-item{
 	/*border: .5px dashed white;*/
 	/*padding-left: 2%;*/
@@ -195,8 +181,9 @@ img{
 	position: fixed;
 	width: 35%;
 	height: 100%;
-	border-right: .5px dashed white;
+	/*border-right: .5px dashed white;*/
 	overflow: scroll;
+	/*display: none;*/
 }
 
 .menuCont{
@@ -206,7 +193,32 @@ img{
 	position: fixed;
 	left: 40%;
 	overflow: scroll;
+	border-left: .5px dashed white;
 }
+
+.collapsible{
+	/*border-style: none;
+	margin: 0;*/
+	display: none;
+	/*position: relative;
+	width: 37%;
+	border: .5px dashed white;
+	text-align: center;
+	font-family: 'Roboto Mono', monospace;
+	color: #ffffff;
+	font-size: 20px;
+	background-color: #000000;*/
+
+}
+
+/*.collapsible:hover{
+	background-color: #ffffff;
+	color: #000000;
+
+}*/
+
+
+
 
 /* /////////////////// SMALL SCREEN  ////////////////////// */
 
@@ -232,7 +244,7 @@ img{
 }
 
 .cont{
-	padding-top: 1%;
+	padding-top: 6%;
 	padding-left: 1%;
 	padding-right: 1%;
 	padding-bottom: 1%;
@@ -244,11 +256,10 @@ img{
 
 .infoCont{
 	padding: 1%;
-	padding-top: 3%;
+	/*padding-top: 3%;*/
 	position: relative;
 	width: 99%;
-	/*height: 100%;*/
-	border-right: .5px dashed white;
+	display: none;
 	/*overflow: scroll;*/
 }
 
@@ -258,6 +269,28 @@ img{
 	left: 0;
 	/*height: 100%;*/
 	position: relative;
+	border-style: none;
 	/*overflow: scroll;*/
+}
+
+.collapsible{
+	border-style: none;
+	margin: 0;
+	display: block;
+	position: relative;
+	width: 100%;
+	border: .5px dashed white;
+	text-align: center;
+	font-family: 'Roboto Mono', monospace;
+	color: #ffffff;
+	font-size: 20px;
+	background-color: #000000;
+
+}
+
+.collapsible:hover{
+	background-color: #ffffff;
+	color: #000000;
+
 }
 }
