--- a/stylesheet_2.css
+++ b/stylesheet_2.css
@@ -80,7 +80,7 @@ p{
 }
 
 .cont{
-	padding-top: 2%;
+	padding-top: 1%;
 	padding-left: 1%;
 	padding-right: 1%;
 	padding-bottom: 1%;
@@ -196,6 +196,10 @@ button{
 	border-left: .5px dashed white;
 }
 
+/*.dataCont{
+	display: none;
+}*/
+
 .collapsible{
 	/*border-style: none;
 	margin: 0;*/
@@ -273,22 +277,34 @@ button{
 	/*overflow: scroll;*/
 }
 
+/*.datasets{
+	display: none;
+}
+*/
+/*.dataCont{
+	padding: 1%;*/
+	/*padding-top: 3%;*/
+/*	position: relative;
+	width: 99%;
+	display: none;
+}*/
+
 .collapsible{
 	border-style: none;
 	margin: 0;
 	display: block;
 	position: relative;
+	float: left;
 	width: 100%;
 	border: .5px dashed white;
 	text-align: center;
 	font-family: 'Roboto Mono', monospace;
 	color: #ffffff;
 	font-size: 20px;
-	background-color: #000000;
-
+	background-color: #000000
 }
 
-.collapsible:hover{
+.active, .collapsible:hover{
 	background-color: #ffffff;
 	color: #000000;
 
