--- a/stylesheet_2.css
+++ b/stylesheet_2.css
@@ -221,6 +221,11 @@ button{
 
 }*/
 
+/* /////////////////// SMALL SCREEN  ////////////////////// */
+
+@media screen and (max-width:  1200px){
+
+}
 
 
 
