--- a/stylesheet_2.css
+++ b/stylesheet_2.css
@@ -80,10 +80,7 @@ p{
 }
 
 .cont{
-	padding-top: 1%;
-	padding-left: 1%;
-	padding-right: 1%;
-	padding-bottom: 1%;
+	padding:  1%;
 	/*overflow: scroll;*/
 	background-color: #000000;
 
