--- a/stylesheet_2.css
+++ b/stylesheet_2.css
@@ -210,7 +210,7 @@ li{
 
 }*/
 
-/* /////////////////// SMALL SCREEN  ////////////////////// */
+/* /////////////////// MEDIUM SCREEN  ////////////////////// */
 
 @media screen and (max-width:  1200px){
 
