--- a/stylesheet_2.css
+++ b/stylesheet_2.css
@@ -30,6 +30,8 @@ a{
 	text-decoration: none;
 	color: #ffffff;
 	display: block;
+	/*background-color: #4B4B4B;*/
+	background-color: rgb(0, 0, 255);
 
 }
 
@@ -43,6 +45,7 @@ a:hover{
 a.imgL{
 	text-decoration: none;
 	display: block;
+	background-color: #000000;
 
 }
 
@@ -99,7 +102,8 @@ p{
 }
 
 hr.a{
-  border-top: thin dotted white;
+	border-style: none;
+  border-top: thin dotted rgb(255, 0, 0);
 }
 
 img{
@@ -110,7 +114,8 @@ img{
 .imgLink{
 
 	width: 100%;
-	border: thin dotted white;
+	border-style: none;
+	border: thin dotted rgb(0, 255, 0);
 	transition: .2s;
 
 }
@@ -160,6 +165,7 @@ marquee.info{
 
 .subCont{
 	padding-top: 1%;
+	margin: 0;
 }
 
 
@@ -234,6 +240,7 @@ marquee.info{
 
 .infoCont{
 	padding: 1%;
+	margin: 0;
 	/*padding-right: 2%;*/
 	position: fixed;
 	width: 36%;
@@ -303,6 +310,7 @@ marquee.info{
 
 .cont{
 	padding-top: 4%;
+	margin: 0;
 	padding-left: 1%;
 	padding-right: 1%;
 	padding-bottom: 1%;
@@ -317,7 +325,7 @@ marquee.info{
 	/*padding-top: 3%;*/
 	position: relative;
 	width: 99%;
-	display: none;
+	display: block;
 	/*overflow: scroll;*/
 }
 
@@ -357,9 +365,9 @@ marquee.info{
 	border: thin dashed white;
 	text-align: center;
 	font-family: 'Roboto Mono', monospace;
-	color: #ffffff;
+	color: #000000;
 	font-size: 20px;
-	background-color: #000000
+	background-color: rgb(0, 255, 0);
 }
 
 .collapsible:hover{
@@ -451,9 +459,9 @@ marquee.info{
 	border: thin dashed white;
 	text-align: center;
 	font-family: 'Roboto Mono', monospace;
-	color: #ffffff;
+	color: #000000;
 	font-size: 20px;
-	background-color: #000000
+	background-color: rgb(0, 255, 0);
 }
 
 .collapsible:hover{
