--- a/stylesheet.css
+++ b/stylesheet.css
@@ -95,7 +95,7 @@ p{
 	height: 90%;
 	border-style: none;
 	border: thin dashed rgb(255, 255, 255);
-	z-index: 1;
+	z-index: 2;
 }
 
 #jsCont{
@@ -257,6 +257,10 @@ marquee.info{
 	padding: 0%;
 }
 
+.headLine{
+	display: block;
+}
+
 /* /////////////////// OUTSOURCED DIVS  ////////////////////// */
 
 /* /////////////////// MEDIUM SCREEN  ////////////////////// */
@@ -276,6 +280,11 @@ marquee.info{
 	float: all;
 }
 
+.headLine{
+	display: none;
+}
+
+
 .imgLink{
 
 	width: 100%;
@@ -285,7 +294,7 @@ marquee.info{
 
 .imgLink:hover{
 
-	width: 100%;
+	/*width: 99%;*/
 	opacity: 0.5;
 }
 
@@ -307,7 +316,7 @@ marquee.info{
 	top: 40px;
 	/*padding-top: 3%;*/
 	position: relative;
-	width: 99%;
+	width: 98%;
 	height: 100%;
 	display: none;
 	/*overflow: scroll;*/
@@ -316,7 +325,7 @@ marquee.info{
 .mainCont{
 	padding: 1%;
 	top: 40px;
-	width: 99%;
+	width: 98%;
 	height: 100%;
 	left: 0;
 	/*height: 100%;*/
@@ -392,14 +401,14 @@ marquee{
 	padding: 1%;
 	/*padding-top: 3%;*/
 	position: relative;
-	width: 99%;
+	width: 98%;
 	display: none;
 	/*overflow: scroll;*/
 }
 
 .mainCont{
 	padding: 1%;
-	width: 99%;
+	width: 98%;
 	left: 0;
 	/*height: 100%;*/
 	position: relative;
