--- a/stylesheet.css
+++ b/stylesheet.css
@@ -127,11 +127,6 @@ img{
 }
 
 
-::-webkit-scrollbar{
-	width: 0;
-	height: 0;
-}
-
 .espace{
 	height: 5%;
 }
@@ -165,6 +160,20 @@ marquee.info{
 .subCont{
 	padding-top: 1%;
 	margin: 0;
+}
+
+iframe.data{
+	position: relative;
+	width: 100%;
+	height: 50%;
+	border-style: none;
+	/*border: thin dashed rgb(255, 255, 255);*/
+	overflow: hidden;
+}
+
+::-webkit-scrollbar{
+	width: 0;
+	height: 0;
 }
 
 
@@ -337,6 +346,15 @@ marquee.info{
 marquee{
 	position: fixed;
 	width: 97%;
+}
+
+iframe.data{
+	position: relative;
+	width: 100%;
+	height: 25%;
+	border-style: none;
+	/*border: thin dashed rgb(255, 255, 255);*/
+	overflow: hidden;
 }
 
 .nftvCont{
