--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,7 +10,7 @@ html.main{
 
 body.main{
 	margin: 0;
-	overflow: scroll;
+	overflow: hidden;
 	padding: 0%;
 	background-color: #000000;
 	z-index: 1;
