--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -236,9 +236,10 @@ iframe.data, iframe.data2{
 	margin: 0;
 	position: relative;
 	width: 30%;
-	height: 100%;
+	height: 98%;
 	overflow: scroll;
 	-webkit-overflow:  scroll;
+	z-index: -2;
 }
 
 .mainCont{
@@ -247,11 +248,12 @@ iframe.data, iframe.data2{
 	padding-left: 1%;
 	padding-right: 1%;
 	width: 65.9%;
-	height: 100%;
+	height: 98%;
 	position: relative;
 	overflow: scroll;
 	border-left: thin dashed rgb(255, 255, 255);
-	clip: inherit;
+	z-index: -2;
+	/*clip: inherit;*/
 }
 
 .nftvCont{
@@ -261,6 +263,7 @@ iframe.data, iframe.data2{
 	position: fixed;
 	/*left: 40%;*/
 	overflow: scroll;
+	z-index: -2;
 	/*border-left: .5px dashed white;*/
 }
 
@@ -335,7 +338,7 @@ img.mob{
 	top: 40px;
 	position: relative;
 	width: 98%;
-	height: 100%;
+	height: 99%;
 	display: none;
 }
 
@@ -344,7 +347,7 @@ img.mob{
 	padding: 1%;
 	top: 40px;
 	width: 98%;
-	height: 100%;
+	height: 99%;
 	position: relative;
 	border-style: none;
 }
